# storage/api-docs/api-docs.json
@@ -329,6 +329,20 @@
                 }
             }
         },
+        "/api/transaksi/hutang-sopir/{id}/list": {
+            "get": {
+                "tags": [
+                    "Transaksi Hutang Sopir"
+                ],
+                "summary": "Get Hutang Sopir by ID",
+                "operationId": "ca0a02872cfb7420545898335b355a11",
+                "responses": {
+                    "200": {
+                        "description": "Hutang Sopir berhasil ditemukan"
+                    }
+                }
+            }
+        },
         "/api/laporan/lainlain": {
             "get": {
                 "tags": [
